tests/baselines/reference/indexerAssignability.errors.txt
==== tests/cases/compiler/indexerAssignability.ts (3 errors) ====
    var a: { [s: string]: string; };
    var b: { [n: number]: string; };
    var c: {};
    
    a = b;
    ~
!!! error TS2322: Type '{ [x: number]: string; }' is not assignable to type '{ [x: string]: string; }':
!!! error TS2322:   Index signature is missing in type '{ [x: number]: string; }'.
    a = c;
    ~
!!! error TS2322: Type '{}' is not assignable to type '{ [x: string]: string; }':
!!! error TS2322:   Index signature is missing in type '{}'.
    b = a;
    b = c;
    ~
!!! error TS2322: Type '{}' is not assignable to type '{ [x: number]: string; }':
!!! error TS2322:   Index signature is missing in type '{}'.
    c = a;
    c = b;